src/grammar.pegjs
Query =
	fields:SelectStatement
    Whitespace
    path: FromStatement
    Whitespace?
    where:WhereStatement?
    Whitespace?
    limit:LimitStatement?
    Whitespace? {
    	return {
            fields,
            path,
            limit,
            where
        };
    }

SelectStatement =
	KeywordSelect
    Whitespace
    fields:Fields {
      return fields;
  }

FromStatement =
	KeywordFrom
    Whitespace
    path:Path {
    	return path;
    }

LimitStatement =
	KeywordLimit
    Whitespace
    limit:Number {
    	return limit
    }

WhereStatement =
	KeywordWhere
    Whitespace
    path:Path
    Whitespace
    operator:Operator
    Whitespace
    value:(Number / String) {
    	return {
        	path,
            operator,
            value
        };
    }

KeywordSelect =
    "select"i

KeywordFrom =
    "from"i

KeywordLimit =
    "limit"i

KeywordWhere =
	"where"i

Fields =
	"*"
    / head:Path tail:(Whitespace? Comma Whitespace? Path)* {
    	var result = [head];
    	for (var i = 0; i < tail.length; i++) {
      		result.push(tail[i][3]);
    	}
    	return result;
    }

Path =
	head:Key tail:(PathSeperator Key)* {
    	let path = head;
        for (const p of tail) {
        	path += '/' + p[1];
        }
        return path;
    }

Key =
	k:[^\.\$#\[\]\/ ,]+ {
    	return k.join('');
    }

PathSeperator =
    "/"

Comma =
    ","

Operator =
	"==" { return '='; } /
    ">=" /
    "<=" /
    "="

Whitespace =
    Space+

Space =
    " "

Number =
    d:[0-9]+ {
        return Number(d.join(''))
    }

String =
    '"' chars:[^"]* '"' {
        return chars.join('');
    } /
    "'" chars:[^']* "'" {
    	return chars.join('');
    }
